--- a/Assignments/A05_LakeWaterQuality.Rmd
+++ b/Assignments/A05_LakeWaterQuality.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 5: Water Quality in Lakes"
-author: "Student Name"
+author: "Sophia Bryson"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -16,7 +16,7 @@ This exercise accompanies the lessons in Water Data Analytics on water quality i
 2. Work through the steps, **creating code and output** that fulfill each instruction.
 3. Be sure to **answer the questions** in this assignment document.
 4. When you have completed the assignment, **Knit** the text and code into a single PDF file.
-5. After Knitting, check your PDF against the key and then submit your assignment completion survey at https://forms.gle/fSe18vMhgzcjUKM39
+5. After Knitting, check your PDF against the key and then submit your assignment completion survey 
 
 Having trouble? See the assignment's answer key if you need a hint. Please try to complete the assignment without the key as much as possible - this is where the learning happens!
 
@@ -28,6 +28,16 @@ Target due date: 2022-02-22
 2. Load the LAGOSdata database and the trophic state index csv file we created in class.
 
 ```{r setup}
+getwd()
+
+library(tidyverse)
+library(lubridate)
+library(LAGOSNE)
+
+theme_set(theme_minimal())
+
+LAGOSdata <- lagosne_load()
+TSI <- read.csv("./Data/Processed/LAGOStrophic.csv", stringsAsFactors = TRUE)
 
 ```
 
@@ -36,64 +46,135 @@ Target due date: 2022-02-22
 3. Similar to the trophic.class column we created in class (determined from TSI.chl values), create two additional columns in the data frame that determine trophic class from TSI.secchi and TSI.tp (call these trophic.class.secchi and trophic.class.tp). 
 
 ```{r}
-
+TSI <- TSI %>% rename(trophic.class.chl = trophic.class) %>%
+               mutate(trophic.class.secchi = case_when(TSI.secchi < 40 ~ "Oligotrophic",
+                                                       TSI.secchi >= 40 & TSI.secchi < 50 ~ "Mesotrophic",
+                                                       TSI.secchi >= 50 & TSI.secchi < 70 ~ "Eutrophic",
+                                                       TSI.secchi >= 70 ~ "Hypereutrophic"),
+                      trophic.class.tp = case_when(TSI.tp < 40 ~ "Oligotrophic",
+                                                   TSI.tp >= 40 & TSI.tp < 50 ~ "Mesotrophic",
+                                                   TSI.tp >= 50 & TSI.tp < 70 ~ "Eutrophic",
+                                                   TSI.tp >= 70 ~ "Hypereutrophic"))
+                      
 ```
 
 
 4. How many observations fall into the four trophic state categories for the three metrics (trophic.class, trophic.class.secchi, trophic.class.tp)? Hint: `n()` function.
 
 ```{r}
+table(TSI$trophic.class.chl)
+table(TSI$trophic.class.secchi)
+table(TSI$trophic.class.tp)
 
 ```
 
 5. What proportion of total observations are considered eutrophic or hypereutrophic according to the three different metrics (trophic.class, trophic.class.secchi, trophic.class.tp)?
 
 ```{r}
+# Chlorophyll:
+chl.trophic <- TSI %>% group_by(trophic.class.chl) %>%
+                       summarise(count = n()) %>%
+                       mutate(proportion = count/sum(count))
+
+print(paste0(round(sum(chl.trophic[1:2,3])*100, 2), 
+             "% of total observations are considered eutrophic or hypereutrophic when using chlorophyll as the measure of trophic state"))
+
+# Secchi:
+secchi.trophic <- TSI %>% group_by(trophic.class.secchi) %>%
+                       summarise(count = n()) %>%
+                       mutate(proportion = count/sum(count))
+
+print(paste0(round(sum(secchi.trophic[1:2,3])*100, 2), 
+             "% of total observations are considered eutrophic or hypereutrophic when using secchi depth as the measure of trophic state"))
+
+# Total phosphorus: 
+tp.trophic <- TSI %>% group_by(trophic.class.tp) %>%
+                       summarise(count = n()) %>%
+                       mutate(proportion = count/sum(count))
+
+print(paste0(round(sum(tp.trophic[1:2,3])*100, 2), 
+             "% of total observations are considered eutrophic or hypereutrophic when using total phosphorus as the measure of trophic state"))
 
 ```
 
 Which of these metrics is most conservative in its designation of eutrophic conditions? Why might this be?
 
-> 
-
+> Chlorophyll is the most conservative designation of eutrophic conditions, classifying more than 50% more observations as eutrophic than did total phosphorus or secchi depth. This may be the result of primary production limiting clarity (as measured by secchi depth) or being limited by phosphorus.
 
 ## Nutrient Concentrations
 
 6. Create a data frame that includes the columns lagoslakeid, sampledate, tn, tp, state, and state_name. Mutate this data frame to include sampleyear and samplemonth columns as well. Filter the data frame for May-September. Call this data frame LAGOSNandP. 
 
 ```{r}
+# Parse out datasets from list
+LAGOSlocus <- LAGOSdata$locus
+LAGOSstate <- LAGOSdata$state
+LAGOSnutrient <- LAGOSdata$epi_nutr
+
+# Tell R to treat lakeid as a factor, not a numeric value
+LAGOSlocus$lagoslakeid <- as.factor(LAGOSlocus$lagoslakeid)
+LAGOSnutrient$lagoslakeid <- as.factor(LAGOSnutrient$lagoslakeid)
+
+# Join data frames
+LAGOSlocations <- left_join(LAGOSlocus, LAGOSstate, by = "state_zoneid")
+
+# Create desired dataframe
+LAGOSNandP <- LAGOSnutrient %>%
+              left_join(., LAGOSlocations, by = "lagoslakeid") %>%
+              select(lagoslakeid, sampledate, tn, tp, state, state_name) %>%
+              mutate(sampleyear = year(sampledate), 
+                     samplemonth = month(sampledate)) %>%
+              drop_na(tn, tp, state) %>% 
+              filter(samplemonth >= 5 & samplemonth <= 9)
 
 ```
 
 7. Create two violin plots comparing TN and TP concentrations across states. Include a 50th percentile line inside the violins. Create a logged y axis and relabel axes.
 ```{r}
+ggplot(LAGOSNandP, aes(x = state)) +
+   geom_violin(aes(y = tn), color = "indianred3", fill = "indianred3", alpha = 0.3, draw_quantiles = c(.5)) +
+   geom_violin(aes(y = tp), color = "olivedrab", fill = "olivedrab", alpha = 0.3, draw_quantiles = c(.5)) + 
+   scale_y_log10() +
+   labs(title = "Nitrogen and Phosphorus Concentrations of Lakes by State",
+        x = "State", y = "Nutrient concentration (N-red and P-green)")
 
 ```
 
 Which states have the highest and lowest median concentrations?
 
-> TN:
+> TN: Indiana and Illinois have the highest median concentration of TN. Maine, New Hampshire, and Vermont have the lowest. 
 
-> TP:
+> TP: Indiana and Illinois have the highest median concentration of TP, also. Newhampsure and Vermont are once again the lowest. 
 
 Which states have the largest and smallest concentration ranges?
 
-> TN: 
+> TN: Iowa, New York, and Rhode Island have the largest concentration ranges of TN. New Hampshire, New Jersey, and Vermont have the smallest. 
 
-> TP: 
+> TP: Connecticut has the largest concentration range by far of TP. New Hampshire, New Jersey, and Vermont have the smallest. 
 
 8. Create two jitter plots comparing TN and TP concentrations across states, with samplemonth as the color. Choose a color palette other than the ggplot default.
 
 ```{r}
 
+ggplot(LAGOSNandP, aes(x = state, color = samplemonth)) +
+   geom_jitter(aes(y = tn), alpha = 0.2) +
+   scale_color_viridis_c(option = "magma") +
+   labs(title = "Total Nitrogen Concentration by State and Month", 
+        x = "State", y = "Total Nitrogen (ug/L)")
+
+ggplot(LAGOSNandP, aes(x = state, color = samplemonth)) +
+   geom_jitter(aes(y = tp), alpha = 0.2) +
+   scale_color_viridis_c(option = "magma") +
+   labs(title = "Total Phosphorus Concentration by State and Month", 
+        x = "State", y = "Total Phosphorus (ug/L)")
 ```
 
 Which states have the most samples? How might this have impacted total ranges from #7?
 
-> TN:
+> TN: Iowa (by far) and Missouri have the most samples for TN. 
 
-> TP: 
+> TP: Iowa and Missouri have the most samples for TP. 
 
-
+> Having more samples makes it more likely that a larger range will be present in the reported observations, since more of the natural variability will be captured by the data. 
 
 
